Added some portfolio items

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,9 +90,21 @@
 						<a id="web"></a>
 						<h1>Web</h1>
 						<h2>Design, Enhancement, and Development</h2>
+							<h3>Product Tour Page &ndash; Sketching Practice</h3>
+							<h4>HTML, CSS, jQuery, PHP, MySQL</h4>
+								<img src="img/sketching_practice.jpg" alt="sketching practice tour page">
+							<h3>Portfolio Concept</h3>
+							<h4>HTML, CSS, jQuery</h4>
+								<img src="img/portfolio_1.jpg" alt="portfolio home page">
+								<img src="img/portfolio_2.jpg" alt="portfolio graphic design page">
+								<img src="img/portfolio_3.jpg" alt="portfolio sound design page">
 							<h3>Business Site &ndash; Enork.com</h3>
 							<h4>HTML, CSS, Javascript/JQuery</h4>
 								<img src="img/enork.jpg" alt="Enork.com Website">
+							<h3>Web App Prototype &ndash; Warhammer 40k List Builder</h3>
+							<h4>HTML, CSS, Javascript/JQuery, PHP, MySQL</h4>
+								<img src="img/list_builder_1.jpg" alt="Web App Prototype Army Manager">
+								<img src="img/list_builder_2.jpg" alt="Web App Prototype Army View">
 							<h3>Information Site &ndash; Cubist Freak</h3>
 							<h4>HTML, CSS, Javascript/JQuery</h4>
 								<img src="img/cubist_freak_1.jpg" alt="Cubist Freak Information Site Page 1">
